# YOLOV8-Seg-ONNX

./: CMakeLists.txt  README.md  inference.cpp
